src/rules/snapshots/pg_migration_lint__rules__pgm024__tests__fires_on_create_table_partition_of_existing_parent.snap
---
source: src/rules/pgm024.rs
expression: findings
---
- rule_id: PGM024
  severity: Critical
  message: "CREATE TABLE 'measurements_2025' PARTITION OF 'measurements' acquires ACCESS EXCLUSIVE on 'measurements' for the duration, blocking all reads and writes routed through it until commit. Create 'measurements_2025' as a standalone table and ATTACH PARTITION it instead — ATTACH only takes SHARE UPDATE EXCLUSIVE on the parent."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
