src/rules/snapshots/pg_migration_lint__rules__pgm024__tests__fires_on_drop_of_live_partition_child.snap
---
source: src/rules/pgm024.rs
expression: findings
---
- rule_id: PGM024
  severity: Critical
  message: "DROP TABLE 'measurements_2023' is a partition of 'measurements': this acquires ACCESS EXCLUSIVE on 'measurements' for the duration, blocking all reads and writes routed through it until commit — and the data is permanently lost. DETACH PARTITION 'measurements_2023' CONCURRENTLY first, then drop the now-standalone table."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
