src/rules/snapshots/pg_migration_lint__rules__pgm024__tests__reindex_schema_without_concurrently_fires.snap
---
source: src/rules/pgm024.rs
expression: findings
---
- rule_id: PGM024
  severity: Critical
  message: "REINDEX SCHEMA 'public' without CONCURRENTLY acquires ACCESS EXCLUSIVE lock, blocking all reads and writes. Use REINDEX SCHEMA CONCURRENTLY 'public' (PostgreSQL 12+)."
  file: migrations/010.sql
  start_line: 1
  end_line: 1
